# madiphs_striga_model

./: .gitignore  README.md  project_file_structure.py  project_file_structure.txt  project_structure.txt  pyproject.toml  requirements.txt  striga_point_risk_assesment.py  weather_request.py
data/raster/: soil_fertility_index.tif
data/shapefile/: malawi_admin1.geojson
madiphs_models/: striga_risk_assesment.py  weather_request.py
madiphs_models/data/raster/: striga_habitat_suitability.tif.aux.xml
madiphs_models/data/shapefile/: malawi_admin0.geojson
madiphs_models/data/striga/: Striga Data Collection (1).csv  Striga Data Collection (1)_NAs.csv  Striga Data Collection - Second Phase.csv
madiphs_models/sample_outputs/: epa_level_striga_risk.geojson  point_locations_striga_risk.geojson
project_file_structure/: project_file_structure.py  project_file_structure.txt
src/madiphs/: point_data_extraction.py  striga_point_risk_assesment.py  weather_request.py
src/madiphs/data/raster/: habitat_suitability.tif
tests/: test_openmeteoweather.py  test_point_data_extraction.py  test_rasterdata.py  test_weather_request.py
