[project]
name = "madiphs_models"
version = "0.1.0"
description = "A python package to access or deploy madiphs models."
authors = [
    {name = "kanjibrian",email = "kanjibrianm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "rasterio (>=1.4.3,<2.0.0)",
    "open-meteo (>=0.3.2,<0.4.0)",
    "openmeteo-requests (>=1.6.0,<2.0.0)",
    "openmeteo-sdk (>=1.20.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "xarray (>=2025.7.1,<2026.0.0)",
    "rioxarray (>=0.19.0,<0.20.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytest (>=8.3.3,<9.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
ipython = "^9.4.0"
jupyter = "^1.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
